
ChangeLog
 [ + added, - removed, * changed ]
 * 10Aug2017 Fixes confusing error message when merger reaches quota limit
 * 20Jul2017 Fixed wrong dependencies with OMPT in OpenMP libraries
 * 13Jul2017 Upgrade to v3.5.0
 + 12Jul2017 New documentation using sphinx-doc
 * 12Jul2017 Fixes configure check for without-cuda and without-cupti
 * 10Jul2017 Make the I/O labels appear in the PCF only if each specific call has been used during the run
 * 10Jul2017 Include elapsed time outside MPI in Test* calls
 + 14Jun2017 Added instrumentation support for OpenMP taskloop and ordered directives
 * 6Jun2017 Make DLB available by default
 + 01Jun2017 Emits cpu_event for each OpenMP thread at least once
 * 30May2017 Clears compilation warnings and MPI_HAS_MPI_F_STATUS_IGNORE bug
 * 30May2017 Compiles and distributes a Fortran module to use the Extrae API
 with Fortran programs
 + 17May2017 Added instrumentation support for mpi_reduce_scatter_block, mpi_ireduce_scatter_block, mpi_alltoallw, mpi_ialltoallw, mpi_win_lock, mpi_win_unlock, mpi_get_accumulate
 + 12May2017 Added compatibility with new events in CUPTI 5 for stream creation
 * 10May2017 Upgraded pyextrae support for Python 3 and added submodule for CUDA tracing
 + 02May2017 Adds intrumentation for kmpc dynamic memory routines
 * 27Apr2017 Extrae_get_version API call now relies on the configure.ac value instead of using a separate include file
 * 26Apr2017 Initializes a different PEBS fd for every thread
 * 26Apr2017 Don't exit when the binary is linked against multiple OpenMP runtimes
 * 24Apr2017 Applied patch to emit a different event for the allocation id events
 * 20Apr2017 Fixes typo in the convenience library for Intel KMPC wrappers
 * 12Apr2017 Fixes CUDA tracing when using CUPTI
 * 12Apr2017 Fixed missing dependency with librt in clocks module
 * 11Apr2017 Changed PEBS initialization to activate in all the threads
 * 04Apr2017 Unifies GNU OpenMP APIs in a single library