@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 21Sep2017 Sampling macros now check if task events have to be stored
  * 10Aug2017 Fixes confusing error message when merger reaches quota limit
  * 20Jul2017 Fixed wrong dependencies with OMPT in OpenMP libraries
  * 13Jul2017 Upgrade to v3.5.0
